testdata/invalid/internal/bootstrap/bootstrap.go
package bootstrap

import _ "github.com/kimtaeyun/testproject-dc-invalid/internal/domain/order"

func Run() {}
